---
(4.2.6p2-RC5) 2010/06/03 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1561] ntpq, ntpdc "passwd" prompts for MD5 password w/SHA1.
* [Bug 1565] sntp/crypto.c compile fails on MacOS over vsnprintf().
* Windows port: do not exit in ntp_timestamp_from_counter() without
  first logging the reason.
* Support "passwd blah" syntax in ntpq.

---
(4.2.6p2-RC4) 2010/05/19 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1555] 4.2.6p2-RC3 sntp illegal C (mixed code and declarations).

---
(4.2.6p2-RC3) 2010/05/11 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1325] unreachable code in sntp recv_bcst_data().
* [Bug 1459] sntp MD5 authentication does not work with ntpd.
* [Bug 1512] ntpsnmpd should connect to net-snmpd via a unix-domain
  socket by default.  Provide a command-line 'socket name' option.
* [Bug 1538] update refclock_nmea.c's call to getprotobyname().
* [Bug 1541] Fix wrong keyword for "maxclock".
* [Bug 1552] update and complete broadcast and crypto features in sntp.
* [Bug 1553] sntp/configure.ac OpenSSL support.
* Escape unprintable characters in a refid in ntpq -p billboard.
* Simplify hash client code by providing OpenSSL EVP_*() API when built
  without OpenSSL.  (from ntp-dev)
* Do not depend on ASCII values for ('A' - '0'), ('a' - '0') in sntp.
* Windows compiling hints/winnt.html update from G. Sunil Tej.

---
(4.2.6p2-RC2) 2010/04/27 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1465] Make sure time from TS2100 is not invalid (backport from
  ntp-dev).
* [Bug 1528] Fix EDITLINE_LIBS link order for ntpq and ntpdc.
* [Bug 1534] win32/include/isc/net.h conflicts with VC++ 2010 errno.h.
* [Bug 1535] "restrict -4 default" and "restrict -6 default" ignored.
* Remove --with-arlib from br-flock.

---
(4.2.6p2-RC1) 2010/04/18 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1503] Auto-enabling of monitor for "restrict ... limited" wrong.
* [Bug 1504] ntpdate tickles ntpd "discard minimum 1" rate limit if
  "restrict ... limited" is used.